# Production_Assistant

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/calculators/: BagWeight.tsx  BladePosition.tsx  BlowUpRatio.tsx  FeetOnRoll.tsx  GaugeAdjustment.tsx  GramWeight.tsx  LineSettings.tsx  MotorCalculations.tsx  PoundsPerDieInch.tsx  PoundsPerHour.tsx  ResinTimeout.tsx  RollWeight.tsx  TrimScrapCalculator.tsx  UnitConverter.tsx
src/components/layout/: Header.tsx  MainPanel.tsx  Sidebar.tsx
src/components/quality/: GlossMonitor.tsx  HazeMonitor.tsx  OpacityMonitor.tsx  QualityMonitor.tsx  TreaterMonitor.tsx
src/components/ui/: AnimatedNumber.tsx  AnimatedResult.tsx  BackgroundEffects.tsx  CalculationHistory.tsx  Card.tsx  CommandPalette.tsx  ComparisonMode.tsx  DisclaimerFooter.tsx  FavoriteButton.tsx  GlassCard.tsx  GradientButton.tsx  LineSelector.tsx  NumberInput.tsx  PageTransition.tsx  QuickPresets.tsx  RangeIndicator.tsx  ResultDisplay.tsx  SpotlightCard.tsx  StatusBadge.tsx  Toaster.tsx  UnitToggle.tsx
src/contexts/: CalculatorContext.tsx  ThemeContext.tsx
src/data/: dieSizes.ts  hopperCapacities.ts  lineProfiles.ts  materialPresets.ts
src/pages/: ComingSoon.tsx  Dashboard.tsx  Settings.tsx
src/types/: index.ts
src/utils/: conversions.ts  formulas.ts
